# edmodel

./: .gitignore  STRATEGY.md  TRANSFORMER_IMPL.md  batch_check_altcoins.py  benchmark.py  benchmark_liq_range_sfp.py  benchmark_results.txt  benchmark_three_tap.py  best_model_liq_range_sfp.pth  best_model_range_quality.pth  best_model_three_tap.pth  best_model_transformer.pth  check_signal.py  liq_range_sfp_scaler.joblib  pyproject.toml  recent_data.json  signals_15min.json  signals_1h.json  signals_4h.json  train_colab.py  validate_liq_range_sfp.py
benchmark/: btc_results.json  btc_sol_eth_results.json  btc_sol_eth_results.txt  eth_results.json  eth_results.txt  gold_results.json  gold_results.txt  liq_range_sfp_results.txt  sol_results.json  sol_results.txt
data/: re_sample.py  write_data.py
edmodel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: Dockerfile  app.py  binance.py  config.py  docker-compose.yml  inference.py  pipeline.py  requirements.txt  sfp_signals.pine  telegram.py
src/: feature_importance.py  generate_tv_signals.py  train.py  train_liq_range_sfp.py  train_range_quality.py  train_range_sfp.py  train_reg.py  train_three_tap.py  train_transformer.py  validate_15m.py  validate_1h.py  validate_4h.py
src/labels/: liq_labels.py  liq_sfp_labels.py  range_quality_labels.py  range_sfp_labels.py  sfp_labels.py  three_tap_labels.py
src/models/: cnn.py  dataset.py  liq_range_sfp_model.py  losses.py  lstm.py  range_quality.py  range_sfp_model.py  sfp_model.py  sfp_transformer.py  three_tap_model.py
